Completate bozze sezioni Firenze, Mondo, blog e rubriche, video dalla rete, sezione ciarpame, i più visti e i più letti

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
               </figure>
             </div>
 
-            <div id="three-articles-container">
+            <div class="three-columns-container">
               <div class="three-articles-article-container">
                 <p>Lorem ipsum</p>
                 <article>
@@ -574,6 +574,7 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
           </div>
         </div>
       </section>
+
       <section id="city-news">
         <div class="secondary-section-title-container">
           <h4>
@@ -668,8 +669,446 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
       </section>
 
       <section id="world-news">
+        <div class="secondary-section-title-container">
+          <h4>
+            MONDO
+          </h4>
+          <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+        </div>
 
+        <div class="articles-container">
+          <div class="articles-container-left">
+            <div class="generic-article-container">
+              <figure>
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
+              </figure>
+              <div class="generic-article-info-container">
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h3>
+                <span>
+                  <i>di Lorem ipsum dolor sit amet</i>
+                </span>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+            </div>
+
+            <div class="coupled-articles-container">
+              <div class="coupled-articles-left-article-container coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                </h2>
+                <div class="coupled-articles-image-and-comment-container">
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="coupled-articles-right-article-container coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                </h2>
+                <div class="coupled-articles-image-and-comment-container">
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="articles-container-right">
+            <div class="generic-article-container">
+              <div class="three-articles-article-container">
+                <p>Lorem ipsum</p>
+                <article>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p>di Lorem Ipsum</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+
+      <section id="blog-e-rubriche">
+        <span>
+          BLOG <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp"> RUBRICHE
+        </span>
+
+        <div class="three-columns-container">
+          <div class="three-columns-column">
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="three-columns-column">
+            <div id="blog-e-rubriche-cartoon-section">
+              <p>
+                LOREM IPSUM
+              </p>
+              <figure>
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+              </figure>
+            </div>
+
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="three-columns-column">
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+
+            <div class="editoriali-commenti-comment">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+              <div class="editoriali-commenti-comment-title-and-author">
+                <h4>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h4>
+                <p>
+                  di Lorem Ipsum
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="video-dalla-rete">
+        <span>
+          I VIDEO DALLA RETE
+        </span>
+
+        <div class="flex-row-container">
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <section id="garbage-section" class="flex-row-container">
+        <div class="garbage-element">
+          <span>
+            LOREM IPSUM
+          </span>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="garbage-element">
+          <span>
+            LOREM IPSUM
+          </span>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="garbage-element">
+          <span>
+            LOREM IPSUM
+          </span>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="garbage-element">
+          <span>
+            LOREM IPSUM
+          </span>
+
+          <figure>
+            <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <div id="i-più-container" class="flex-row-container">
+        <section id="i-più-visti" class="half-container flex-column-container">
+          <span>
+            I PIÙ VISTI
+          </span>
+
+          <div class="flex-row-container">
+            <div>
+              <ul>
+                <li>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figcaption>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figcaption>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </figcaption>
+                  </figure>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <ul>
+                <li>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figcaption>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figcaption>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </figcaption>
+                  </figure>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section id="i-più-letti" class="half-container flex-column-container">
+          <span>
+            I PIÙ LETTI
+          </span>
+
+          <div class="flex-row-container">
+            <div>
+              <ul>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <ul>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
   </main>
 
