Completata bozza dei blog del corriere

--- a/index.html
+++ b/index.html
@@ -1109,6 +1109,137 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
           </div>
         </section>
       </div>
+
+      <section id="i-blog-del-corriere">
+        <h4 id="i-blog-del-corriere-title">
+          I BLOG DEL CORRIERE
+        </h4>
+
+        <div id="i-blog-del-corriere-first-row" class="flex-row-container">
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+        </div>
+
+        <div id="i-blog-del-corriere-second-row" class="flex-row-container">
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+
+
+          <div class="flex-row-container">
+            <div>
+              <h3>
+                LOREM IPSUM
+              </h3>
+              <p>
+                di Lorem Ipsum
+              </p>
+            </div>
+            <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+          </div>
+        </div>
+      </section>
     </div>
   </main>
 
